classDiagram
    AutoAgent --o Session
    BaseLiveAgent --|> LiveAgent
    PyJSLiveAgent --|> BaseLiveAgent
    PyJSAutoAgent --|> AutoAgent
    PyJSAutoAgent o-- PyJSLiveAgent
    PyJSLiveAgent --> debugpy
    PyJSLiveAgent --> js_dap
    <<interface>> LiveAgent
    <<interface>> AutoAgent
    class LiveAgent {
        +start_server()*
        +stop_server()*
        +restart_server()*
        +initialize()*
        +load_code()*
        +execute()*
    }
    class BaseLiveAgent {
        -io JsonIOStream
        +set_breakpoint(path, lines)
        +set_function_breakpoint(names)
        +get_stackframes()
        +next_breakpoint()
        +step()
        +step_out()
        +evaluate(expression)
        +wait(type)
    }
    class AutoAgent {
        +execute()*
        +restart()*
        +update_code()*
    }
    class Session {
        String code
    }
    
